--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Aaron Ding # the website title (if blank, full name will be used instead)
+title: Yuheng (Aaron) Ding # the website title (if blank, full name will be used instead)
 first_name: Yuheng (Aaron)
 middle_name:
 last_name: Ding
