--- a/_config.yml
+++ b/_config.yml
@@ -173,6 +173,10 @@ kramdown:
 # Includes & excludes
 include: ["_pages", "_scripts"]
 exclude:
+  - _pages/about_einstein.md
+  - _pages/dropdown.md
+  - _pages/teaching.md
+  - _pages/repositories.md
   - bin/
   - CONTRIBUTING.md
   - CUSTOMIZE.md
