--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer_text: >
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: Yuheng Ding, Aaron Ding, UCLA, CMU, Computer Science, Software Engineer, Machine Learning, Natural Language Processing # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: assets/img/animated_profile.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://AaXDing.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
