--- a/_config.yml
+++ b/_config.yml
@@ -36,14 +36,6 @@ repo_trophies:
   theme_dark: gitdimmed # https://github.com/ryo-ma/github-profile-trophy
 
 # -----------------------------------------------------------------------------
-# RSS Feed
-# -----------------------------------------------------------------------------
-# will use title and url fields
-# Take a look to https://github.com/jekyll/jekyll-feed for more customization
-
-rss_icon: true
-
-# -----------------------------------------------------------------------------
 # Layout
 # -----------------------------------------------------------------------------
 
@@ -579,7 +571,8 @@ jekyll_get_json:
 
 jsonresume:
   - basics
-  - work
+  - work experience
+  - research experience
   - education
   - publications
   - projects
