--- a/_config.yml
+++ b/_config.yml
@@ -567,7 +567,7 @@ third_party_libraries:
 
 jekyll_get_json:
   - data: resume
-    json: assets/json/resume.json # it can also be an url
+    json: assets/json/1.json # it can also be an url
 
 jsonresume:
   - basics
