--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -12,7 +12,7 @@
     - name: LinkedIn
       value: <a href="https://linkedin.com/in/yuheng-ding">https://linkedin.com/in/yuheng-ding</a>
     - name: Summary
-      value: Undergraduate at UCLA (CS & Applied Math, GPA 3.88) with experience in full-stack development, AI research, and software engineering, joining CMU's MIIS program to deepen expertise in intelligent information systems.
+      value: Undergraduate at UCLA (CS & Applied Math, GPA 3.88) with experience in software engineering and AI research, joining CMU's MIIS program to deepen expertise in intelligent information systems.
 
 - title: Education
   type: time_table
